--- a/package.json
+++ b/package.json
@@ -15,5 +15,12 @@
   "bugs": {
     "url": "https://github.com/ericdouglas/mean-blackjack/issues"
   },
-  "homepage": "https://github.com/ericdouglas/mean-blackjack"
+  "homepage": "https://github.com/ericdouglas/mean-blackjack",
+  "dependencies": {
+    "body-parser": "^1.12.2",
+    "ejs": "^2.3.1",
+    "express": "^4.12.3",
+    "method-override": "^2.3.2",
+    "mongoose": "^4.0.1"
+  }
 }
