--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "blackjack game implemented with the MEAN stack",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/.bin/karma start"
   },
   "repository": {
     "type": "git",
@@ -22,5 +22,13 @@
     "express": "^4.12.3",
     "method-override": "^2.3.2",
     "mongoose": "^4.0.1"
+  },
+  "devDependencies": {
+    "chai": "^2.2.0",
+    "karma": "^0.12.31",
+    "karma-chai": "^0.1.0",
+    "karma-mocha": "^0.1.10",
+    "karma-phantomjs-launcher": "^0.1.4",
+    "mocha": "^2.2.4"
   }
 }
