--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "angular-animate": "~1.3.15",
     "angular-toastr": "~1.2.1",
     "angular": "~1.3.15",
-    "ui-router": "~0.2.13"
+    "ui-router": "~0.2.13",
+    "angular-mocks": "~1.3.15"
   }
 }
